--- a/Web-App/templates/login.html
+++ b/Web-App/templates/login.html
@@ -5,9 +5,26 @@
   <title>Pet Adoption Log-in</title>
   <link rel="stylesheet" href="{{ url_for('static', filename = 'login.css') }}">
 </head>
-
 <body>
-  
+  <div class="login-container">
+    <h1>Pet Adoption Login</h1>
+    <form action="{{ url_for('login') }}" method="POST">
+      <div class="form-group">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+      <button type="submit">Login</button>
+    </form>
+    {% if error %}
+    <div class="error-message">
+      {{ error|safe }}
+    </div>
+    {% endif %}
+  </div>
 </body>
 
 </html>
