Deprecate sql wrapper

--- a/Web-App/templates/login.html
+++ b/Web-App/templates/login.html
@@ -28,6 +28,7 @@
 
     <div class="register-link">
       <a href="{{ url_for('register_page') }}">Don't have an account? Register here.</a>
+    </div>
   </div>
 </body>
 
