--- a/Web-App/templates/register.html
+++ b/Web-App/templates/register.html
@@ -21,7 +21,7 @@
           <label for="contact_number">Contact Number:</label>
           <input type="text" id="contact_number" name="contact_number" required>
         </div>
-        <button type="submit">Login</button>
+        <button type="submit">Register</button>
       </form>
       
     {% if error %}
