add boilerplate for the webpages

--- a/Web-App/templates/login.html
+++ b/Web-App/templates/login.html
@@ -22,7 +22,7 @@
     
     {% if error %}
     <div class="error-message">
-      {{ error|safe }}
+      <p>{{ error|safe }}</p>
     </div>
     {% endif %}
 
