--- a/Web-App/templates/register.html
+++ b/Web-App/templates/register.html
@@ -26,7 +26,7 @@
       
     {% if error %}
     <div class="error-message">
-      {{ error|safe }}
+      <p>{{ error|safe }}</p>
     </div>
     {% endif %}
     
