--- a/Web-App/static/register.css
+++ b/Web-App/static/register.css
@@ -1,8 +1,8 @@
 body {
   display: flex;
   font-family: 'Courier New', Courier, monospace;
-  background-color: #888888;
-  color:#faebd7;
+  background-color: #f1f1f1;
+  color:#0f0f0f;
   justify-content: center;
   min-height: 100vh;
   align-items: center;
