--- a/Web-App/templates/error.html
+++ b/Web-App/templates/error.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class = "error-message">
-    <p>Sorry you have encountered the following error.</p>
+    <p>Sorry you have encountered the following error:</p>
 
     <p>{{ error|safe }}</p>
   </div>
