--- a/Web-App/templates/add_pet.html
+++ b/Web-App/templates/add_pet.html
@@ -46,11 +46,11 @@
         <br><br>
 
         <label for="age">Age:</label>
-        <input type="number" id="age" name="age" required>
+        <input type="number" id="age" name="age" min="0" max="30" step="1" required>
         <br><br>
 
         <label for="fee">Fee:</label>
-        <input type="number" id="fee" name="fee" step="0.01" required>
+        <input type="number" id="fee" name="fee" step="0.01" min="0" required>
         <br><br>
 
         <label for="writeup">Write-up:</label>
