--- a/Web-App/templates/home.html
+++ b/Web-App/templates/home.html
@@ -21,8 +21,8 @@
             text-align: center;
         }
         .pet-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            display: flex;
+            flex-direction: row;
             gap: 20px;
             margin-top: 30px;
         }
@@ -30,14 +30,17 @@
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            padding: 15px;
+            padding: 10px;
             transition: transform 0.3s ease;
+            width: 250px;
         }
         .pet-card:hover {
             transform: translateY(-5px);
+            transform: scale(1.03);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
         .pet-card img {
-            width: 100%;
+            width: 200px;
             height: 200px;
             object-fit: cover;
             border-radius: 8px;
@@ -65,6 +68,8 @@
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
+            border: 2px solid;
+            border-color: #0f0f0f;
         }
 
         .pet-writeup {
@@ -82,6 +87,7 @@
             {% for pet in pets %}
             <div class="pet-card">
                 <img src="data:image/png;base64,{{ pet.photos[0] }}" alt="{{ pet.name }}">
+                
                 <div class="pet-info">
                   <div class="pet-name">{{ pet.name }}</div>
                   <div class="pet-details">
@@ -90,10 +96,10 @@
                       <p>Sex: {{ pet.sex | capitalize }}</p>
                       <p>Fee: ${{ pet.fee }}</p>
                   </div>
+
                   <div class="pet-writeup">
                       <p>{{ pet.writeup[:100] }}{% if pet.writeup|length > 100 %}...{% endif %}</p>
                   </div>
-              </div>
               </div>
             </div>
             {% endfor %}
