--- a/Web-App/templates/register.html
+++ b/Web-App/templates/register.html
@@ -19,7 +19,7 @@
         </div>
         <div class="form-group">
           <label for="contact_number">Contact Number:</label>
-          <input type="text" id="contact_number" name="contact_number" required>
+          <input type="number" id="contact_number" name="contact_number" required>
         </div>
         <button type="submit">Register</button>
       </form>
