--- a/Web-App/templates/login.html
+++ b/Web-App/templates/login.html
@@ -26,8 +26,8 @@
     </div>
     {% endif %}
 
-    <div class="register-link">
-      <a href="{{ url_for('register_page') }}">Don't have an account? Register here.</a>
+    <div>
+      <a href="{{ url_for('register_page') }}" class="register-link">Don't have an account? Register here.</a>
     </div>
   </div>
 </body>
