--- a/Web-App/templates/register.html
+++ b/Web-App/templates/register.html
@@ -30,8 +30,8 @@
     </div>
     {% endif %}
     
-    <div class="return-to-login-link">
-      <a href="{{ url_for('login_page') }}">Return to login page.</a>
+    <div>
+      <a href="{{ url_for('login_page') }}" class="return-to-login-link">Return to login page.</a>
     </div>
 
     </div>
