--- a/Web-App/static/login.css
+++ b/Web-App/static/login.css
@@ -34,6 +34,7 @@ button {
   text-decoration: none;
   border-radius: 5px;
   border: 2px solid;
+  border-color: #0f0f0f;
   font-weight: bold;
 }
 
@@ -54,16 +55,17 @@ button {
 }
 
 .register-link {
-  padding: 10px;
+  font-size: large;
   display: block;
-  width: 300px;
+  width: 280px;
   margin: 20px auto;
-  background-color: #a4d0ec;
-  color: black;
+  padding: 10px;
+  background-color: #3498db;
+  color: white;
   text-align: center;
   text-decoration: none;
-  border: 2px solid;
   border-radius: 5px;
-  font-weight: bold;
+  border: 2px solid;
   border-color: #0f0f0f;
+  font-weight: bold;
 }
