--- a/Web-App/templates/login.html
+++ b/Web-App/templates/login.html
@@ -27,7 +27,7 @@
     {% endif %}
 
     <div>
-      <a href="{{ url_for('register_page') }}" class="register-link">Don't have an account? Register here.</a>
+      <a href="{{ url_for('register_page') }}" class="register-link">Don't have an account? Register here</a>
     </div>
   </div>
 </body>
