--- a/Web-App/templates/register.html
+++ b/Web-App/templates/register.html
@@ -34,7 +34,7 @@
     {% endif %}
   
     <div>
-      <a href="{{ url_for('login_page') }}" class="return-to-login-link">Return to login page.</a>
+      <a href="{{ url_for('login_page') }}" class="return-to-login-link">Return to login page</a>
     </div>
   </div>
 </body>
