--- a/Web-App/templates/home.html
+++ b/Web-App/templates/home.html
@@ -82,21 +82,6 @@
             border-color: #0f0f0f;
         }
 
-        .delete-pet-btn {
-            display: block;
-            width: 200px;
-            margin: 10px auto;
-            padding: 10px;
-            background-color: #3498db;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-            border: 2px solid;
-            border-color: #0f0f0f;
-        }
-
         .search-pet-btn {
             display: block;
             width: 200px;
@@ -123,14 +108,14 @@
             padding: 5px;
         }
 
-        .edit-pet-btn-container {
+        .pet-btn-container {
             display: inline-block;
-            margin: 5px auto;
+            margin: 2px auto;
             border: 1px solid;
             border-color: #0f0f0f;
             background-color: #3498db;
             border-radius: 3px;
-            padding: 3px;
+            padding: 2px;
         }
 
         .edit-pet-btn {
@@ -139,6 +124,24 @@
             color: white;
             text-align: center;
             text-decoration: none;
+            border: 2px solid;
+            border-color: #5f5f5f;
+            border-radius: 3px;
+            padding: 2px;
+            margin: 1px;
+        }
+
+        .delete-pet-btn {
+            font-weight: bold;
+            font-size: medium;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            border: 2px solid;
+            border-color: #5f5f5f;
+            border-radius: 3px;
+            padding: 2px;
+            margin: 1px;
         }
     </style>
 </head>
@@ -147,7 +150,6 @@
         <h1>Welcome, {{ username }}!</h1>
         <div class="btn-container">
             <a href="{{ url_for('add_pet_page') }}" class="add-pet-btn">Add a New Pet</a>
-            <a href="{{ url_for('delete_pet_page') }}" class="delete-pet-btn">Delete a Pet</a> 
             <a href="{{ url_for('search_page')}}" class="search-pet-btn">Search for a Pet</a>
         </div>
          
@@ -169,8 +171,10 @@
                       <p>{{ pet.writeup[:100] }}{% if pet.writeup|length > 100 %}...{% endif %}</p>
                   </div>
 
-                  <div class="edit-pet-btn-container">
+                  <div class="pet-btn-container">
                     <a href="{{ url_for('edit_pet_page', pet_id=pet.id) }}" class="edit-pet-btn">Edit pet details</a>
+
+                    <a href="{{ url_for('delete_pet_page', pet_id=pet.id) }}" class="delete-pet-btn">Delete pet</a>
                   </div>
               </div>
             </div>
