--- a/Web-App/templates/home.html
+++ b/Web-App/templates/home.html
@@ -24,9 +24,11 @@
         .pet-grid {
             display: flex;
             flex-direction: row;
+            flex-wrap: wrap;
             gap: 20px;
             margin-top: 30px;
         }
+
         .pet-card {
             background-color: white;
             border-radius: 8px;
@@ -43,10 +45,11 @@
         }
 
         .pet-card img {
-            width: 200px;
-            height: 200px;
+            width: 250px;
+            height: 250px;
             object-fit: cover;
             border-radius: 8px;
+
         }
         .pet-info {
             margin-top: 10px;
@@ -54,38 +57,23 @@
         .pet-name {
             font-weight: bold;
             font-size: 1.2em;
-            color: #2c3e50;
+            color: #4f5858;
         }
         .pet-details {
-            color: #7f8c8d;
+            color: #4f5858;
             font-size: 0.9em;
         }
 
         .pet-writeup {
           margin-top: 10px;
           font-size: 0.9em;
-          color: #34495e;
+          color: #4f5858;
         }
 
-        .add-pet-btn {
+        .add-pet-btn, .search-pet-btn {
             display: block;
             width: 200px;
-            margin: 10px auto;
-            padding: 10px;
-            background-color: #3498db;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-            border: 2px solid;
-            border-color: #0f0f0f;
-        }
-
-        .search-pet-btn {
-            display: block;
-            width: 200px;
-            margin: 10px auto;
+            margin: 5px auto;
             padding: 10px;
             background-color: #3498db;
             color: white;
@@ -98,7 +86,7 @@
         }
 
         .btn-container {
-            max-width: 800px;
+            max-width: 460px;
             display: flex;
             flex-direction: row;
             justify-content: center;
@@ -108,33 +96,20 @@
             padding: 5px;
         }
 
-        .pet-btn-container {
-            display: inline-block;
-            margin: 2px auto;
-            border: 1px solid;
-            border-color: #0f0f0f;
-            background-color: #3498db;
-            border-radius: 3px;
-            padding: 6px 12px;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-
         .edit-pet-btn, .delete-pet-btn {
             display: inline-block;
-            width: 90%;
+            width: 100%;
             font-weight: bold;
             font-size: medium;
             color: white;
             text-align: center;
             text-decoration: none;
             border: 2px solid;
-            border-color: #5f5f5f;
+            border-color: #0f0f0f;
+            background-color: #3498db;
             border-radius: 3px;
             padding: 1px;
             margin: 3px 0;
-            width: 100%;
         }
 
     </style>
@@ -165,7 +140,7 @@
                       <p>{{ pet.writeup[:100] }}{% if pet.writeup|length > 100 %}...{% endif %}</p>
                   </div>
 
-                  <div class="pet-btn-container">
+                  <div>
                     <a href="{{ url_for('edit_pet_page', pet_id=pet.id) }}" class="edit-pet-btn">Edit pet details</a>
                     
                     <br>
