--- a/Web-App/templates/add_pet.html
+++ b/Web-App/templates/add_pet.html
@@ -9,7 +9,7 @@
   <div class="add-pet-container">
     <h1>Submit Information of pet</h1><br><br>
 
-    <form action="" method="POST" enctype="multipart/form-data">
+    <form action="{{ url_for('add_pet_page') }}" method="POST" enctype="multipart/form-data">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         <br><br>
@@ -28,8 +28,8 @@
 
         <label for="sex">Sex:</label>
         <select id="sex" name="sex" required>
-          <option value="male">Male</option>
-          <option value="female">Female</option>
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
         </select>
         <br><br>
 
@@ -45,7 +45,7 @@
         <br><br>
 
         <label for="photos">Photos:</label>
-        <input type="file" id="photos" name="photos" multiple>
+        <input type="file" id="photos" name="photos" accept="image/*" multiple>
         <br><br>
 
         <input type="submit" value="Submit" class="submit-button">
