--- a/Web-App/templates/home.html
+++ b/Web-App/templates/home.html
@@ -38,6 +38,10 @@
                     
                     <br>
 
+                    <a href="{{ url_for('view_interest_page', pet_id=pet.id) }}" class="view-interests-btn">View interests</a>
+
+                    <br>
+
                     <a href="{{ url_for('delete_pet_page', pet_id=pet.id) }}" class="delete-pet-btn">Delete pet</a>
                   </div>
               </div>
