--- a/Web-App/templates/edit_pet.html
+++ b/Web-App/templates/edit_pet.html
@@ -21,15 +21,30 @@
   }
 
   .update-box {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px #ccc;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .update-fields-box {
      margin: 0 auto;
      padding: 20px;
-     background-color: #fff;
-     border: 1px solid #ccc;
-     border-radius: 5px;
-     box-shadow: 0 0 10px #ccc;
+     display: grid;
+     grid-template-columns: 1fr 2fr;
+     gap: 20px;
+     justify-content: space-between;
    }
 
    .text-box, .picture-box {
+    width: 100%;
+    display: inline-block;
+    vertical-align: top;
     margin: 5px auto;
     padding: 5px;
     background-color: #fff;
@@ -54,7 +69,8 @@
 <body>
   <h1>Edit pet details</h1>
   <div class="update-box">
-    <form action="{{ url_for('edit_pet_page', pet_id=pet_properties.id) }}" method="POST" enctype="multipart/form-data">
+  <form action="{{ url_for('edit_pet_page', pet_id=pet_properties.id) }}" method="POST" enctype="multipart/form-data"></form>
+    <div class="update-fields-box">
       <div class="text-box">
         <div class="form-option-box">
           <label for="name">Name:</label>
@@ -98,8 +114,8 @@
       </div>
       
       <div class="picture-box">
-        {% for photo in pet_properties.photos %}
-        <img src="data:image/png;base64,{{ photo }}" alt="{{ pet_properties.name }}" width="200px" height="200px">
+        {% for photo in pet_properties.photos[:3] %}
+        <img src="data:image/png;base64,{{ photo }}" alt="{{ pet_properties.name }}" width="250px" height="250px">
         {% endfor %}
         <label for="photos">Photos:</label>
         <input type="file" id="photos" name="photos" accept="image/*" multiple>
@@ -107,9 +123,12 @@
 
       <br>
 
-      <button type="submit">Update Pet</button>
-    </form>
+      
+    </div>
+    <button type="submit">Update Pet</button>
+  </form>
   </div>
+  
   
 </body>
 </html>
