--- a/Web-App/templates/delete_account.html
+++ b/Web-App/templates/delete_account.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 
-<html>
-<style>
-  
-</style>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Delete Account for Pet Adoption Website</title>
   <link rel="stylesheet" href="{{ url_for('static', filename = 'delete_account.css') }}">
 </head>
 <body>
-  
+  <h1>Delete Account for {{ username }}</h1>
+
+  <div class="form-box">
+    <form action="{{ url_for('delete_account_page') }}" method="POST" enctype="multipart/form-data">
+      <div class="option-box">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+
+      <br>
+
+      <button type="submit" class="submit-btn">Delete Account</button>
+    </form>
+  </div>
 </body>
 </html>
