--- a/Web-App/templates/error.html
+++ b/Web-App/templates/error.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Error: {{ error|safe }}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename = 'error.css') }}">
 </head>
@@ -10,6 +12,10 @@
     <p>Sorry you have encountered the following error:</p>
 
     <p>{{ error|safe }}</p>
+
+    <br>
+
+    <a href="{{ url_for('home_page') }}" class="return-to-home-btn">Back to Home</a>
   </div>
 </body>
 </html>
