--- a/Web-App/templates/home.html
+++ b/Web-App/templates/home.html
@@ -13,6 +13,8 @@
         <div class="btn-container">
             <a href="{{ url_for('add_pet_page') }}" class="add-pet-btn">Add a New Pet</a>
             <a href="{{ url_for('search_page')}}" class="search-pet-btn">Search for a Pet</a>
+            <a href="{{ url_for('change_password_page')}}" class="change-password-btn">Change Password</a>
+            <a href="{{ url_for('delete_account_page')}}" class="delete-account-btn">Delete Account</a>
         </div>
          
         <div class="pet-grid">
