--- a/Web-App/templates/search.html
+++ b/Web-App/templates/search.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <style>
   
 </style>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Search for a Pet</title>
   <link rel="stylesheet" href="{{ url_for('static', filename = 'search.css') }}">
 </head>
