--- a/Web-App/static/home.css
+++ b/Web-App/static/home.css
@@ -66,7 +66,7 @@ h1 {
   color: #4f5858;
 }
 
-.add-pet-btn, .search-pet-btn {
+.add-pet-btn, .search-pet-btn, .change-password-btn, .delete-account-btn {
   display: block;
   width: 200px;
   margin: 5px auto;
@@ -82,8 +82,9 @@ h1 {
 }
 
 .btn-container {
-  max-width: 460px;
+  max-width: fit-content;
   display: flex;
+  gap: 10px;
   flex-direction: row;
   justify-content: center;
   margin: 20px auto;
