--- a/Web-App/templates/change_password.html
+++ b/Web-App/templates/change_password.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 
-<html>
-<style>
-  
-</style>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Change Password for Pet Adoption Website</title>
   <link rel="stylesheet" href="{{ url_for('static', filename = 'change_password.css') }}">
 </head>
 <body>
-  
+  <h1>Change Password for {{ username }}</h1>
+
+  <div class="form-box">
+    <form action="{{ url_for('change_password_page') }}" method="POST" enctype="multipart/form-data">
+      <div class="option-box">
+        <label for="prev_password">Current Password:</label>
+        <input type="password" id="prev_password" name="prev_password" required>
+      </div>
+      
+      <br>
+      
+      <div class="option-box">
+        <label for="new_password">New Password:</label>
+        <input type="password" id="new_password" name="new_password" required>
+      </div>
+
+      <br>
+
+      <button type="submit" class="submit-btn">Change Password</button>
+    </form>
+  </div>
 </body>
 </html>
