--- a/Web-App/templates/login.html
+++ b/Web-App/templates/login.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pet Adoption Log-in</title>
   <link rel="stylesheet" href="{{ url_for('static', filename = 'login.css') }}">
 </head>
