--- a/Web-App/templates/home.html
+++ b/Web-App/templates/home.html
@@ -40,7 +40,7 @@
                     
                     <br>
 
-                    <a href="{{ url_for('view_interest_page', pet_id=pet.id) }}" class="view-interests-btn">View interests</a>
+                    <a href="{{ url_for('view_pet_page', pet_id=pet.id) }}" class="view-pet-btn">View pet</a>
 
                     <br>
 
