Only search page left lesgo

--- a/Web-App/static/home.css
+++ b/Web-App/static/home.css
@@ -93,7 +93,7 @@ h1 {
   padding: 5px;
 }
 
-.edit-pet-btn, .delete-pet-btn, .view-interests-btn {
+.edit-pet-btn, .delete-pet-btn, .view-pet-btn {
   display: inline-block;
   width: 100%;
   font-weight: bold;
