--- a/Web-App/templates/view_pet.html
+++ b/Web-App/templates/view_pet.html
@@ -2,135 +2,11 @@
 
 <html lang="en">
 
-<style>
-  body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  margin: 0;
-  padding: 20px;
-}
-
-h1 {
-  color: #333;
-  text-align: center;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-.view-box {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 0 10px #ccc;
-  justify-content: center;
-  text-align: center;
-}
-
-.fields-box {
-  margin: 0 auto;
-  padding: 20px;
-  padding-bottom: 5px;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  gap: 20px;
-  justify-content: space-between;
-}
-
-.text-box {
-  width: 100%;
-  display: inline-block;
-  vertical-align: top;
-  margin: 5px auto;
-  padding: 5px;
-  background-color: #fff;
-  border: 2px solid #3c3c3c;
-  border-radius: 5px;
-}
-
-.btn-box {
-  margin: 5px auto;
-  padding: 5px;
-  background-color: #fff;
-  border: 1px solid #3c3c3c;
-  border-radius: 5px;
-}
-
-.update-pet-btn {
-  display: block;
-  width: 200px;
-  margin: 5px auto;
-  padding: 10px;
-  background-color: #3498db;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 5px;
-  font-weight: bolder;
-  border: 2px solid;
-  border-color: #0f0f0f;
-}
-
-.slider {
-  width: 100%;
-  margin: 5px auto;
-  position: relative;
-  overflow: hidden;
-  border: 2px solid #3c3c3c;
-  border-radius: 5px;
-}
-
-.slide {
-  width: 100%;
-  max-width: 800px;
-  height: 350px;
-  position: absolute;
-  transition: all 0.5s;
-}
-
-.slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.btn {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  padding: 10px;
-  border: none;
-  border-radius: 50%;
-  z-index: 10px;
-  cursor: pointer;
-  background-color: #fff;
-  font-size: 18px;
-}
-.btn:active {
-  transform: scale(1.1);
-}
-.btn-prev {
-  top: 45%;
-  left: 2%;
-}
-
-.btn-next {
-  top: 45%;
-  right: 2%;
-}
-</style>
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>View Pet: {{ pet_properties.name }}</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">\
+  <link rel="stylesheet" href="{{ url_for('static', filename='view_pet.css') }}">
 </head>
 
 <body>
@@ -165,75 +41,33 @@ label {
 </div>
 
     <div class="btn-box">
-      <a href="{{ url_for('home_page')}}" class="return-home-btn">Return to Home Page</a>
       {% if not is_owner %}
 
-      {% if is_interested %}
-      <a href="{{ url_for('delete_interest_page', pet_id=pet_properties.id) }}" class="delete-interest-btn">Delele Interest</a>
+        {% if is_interested %}
+        <a href="{{ url_for('delete_interest_page', pet_id=pet_properties.id) }}" class="delete-interest-btn">Delete Interest</a>
+
+        {% else %}
+        <a href="{{ url_for('submit_interest_page', pet_id=pet_properties.id) }}" class="submit-interest-btn">Submit Interest</a>
+      
+        {% endif %}
 
       {% else %}
-      <a href="{{ url_for('submit_interest_page', pet_id=pet_properties.id) }}" class="submit-interest-btn">Submit Interest</a>
-      
+        <h3>Interested parties:</h3>
+        {% if not detail_list %}
+          <p><strong>There are no parties interested in this pet currently</strong></p>
+        {% else %}
+          <ul>
+            {% for detail in detail_list %}
+              <li>Name: {{ detail.username }}, Contact number: {{ detail.contact_number }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
       {% endif %}
-
-      {% else %}
-      <h2>Interested parties:</h2>
       
-
-      {% endif %}
-      
+      <a href="{{ url_for('home_page')}}" class="return-home-btn">Return to Home Page</a>
     </div>
 
-    <script>
-        // Select all slides
-const slides = document.querySelectorAll(".slide");
-
-// loop through slides and set each slides translateX
-slides.forEach((slide, indx) => {
-  slide.style.transform = `translateX(${indx * 100}%)`;
-});
-
-// select next slide button
-const nextSlide = document.querySelector(".btn-next");
-
-// current slide counter
-let curSlide = 0;
-// maximum number of slides
-let maxSlide = slides.length - 1;
-
-// add event listener and navigation functionality
-nextSlide.addEventListener("click", function () {
-  // check if current slide is the last and reset current slide
-  if (curSlide === maxSlide) {
-    curSlide = 0;
-  } else {
-    curSlide++;
-  }
-
-  //   move slide by -100%
-  slides.forEach((slide, indx) => {
-    slide.style.transform = `translateX(${100 * (indx - curSlide)}%)`;
-  });
-});
-
-// select next slide button
-const prevSlide = document.querySelector(".btn-prev");
-
-// add event listener and navigation functionality
-prevSlide.addEventListener("click", function () {
-  // check if current slide is the first and reset current slide to last
-  if (curSlide === 0) {
-    curSlide = maxSlide;
-  } else {
-    curSlide--;
-  }
-
-  //   move slide by 100%
-  slides.forEach((slide, indx) => {
-    slide.style.transform = `translateX(${100 * (indx - curSlide)}%)`;
-  });
-});
-    </script>
+  <script src="{{ url_for('static', filename='view_pet.js') }}"></script>
 </body>
 
 </html>
