Refactor search function from specific users and use table to list out the details of interested parties in view pets

--- a/Web-App/templates/home.html
+++ b/Web-App/templates/home.html
@@ -23,7 +23,7 @@
                 <img src="data:image/png;base64,{{ pet.photos[0] }}" alt="{{ pet.name }}">
                 
                 <div class="pet-info">
-                  <div class="pet-name">{{ pet.name }}</div>
+                  <div class="pet-name">Name: {{ pet.name }}</div>
                   <div class="pet-details">
                       <p>Age: {{ pet.age }} years</p>
                       <p>Type: {{ pet.pet_type }}</p>
