--- a/Web-App/static/view_pet.css
+++ b/Web-App/static/view_pet.css
@@ -10,6 +10,20 @@ h1 {
   text-align: center;
 }
 
+table {
+  border-collapse: collapse;
+  border: 2px solid;
+  border-radius: 5px;
+  border-color: #3f3f3f;
+  margin: 0 auto;
+}
+
+th, td {
+  border: 1px solid;
+  border-color: #3f3f3f;
+  padding: 5px
+}
+
 .view-box {
   max-width: 800px;
   margin: 0 auto;
